# strata

./: .gitignore  Makefile  README.md  docker-compose.yml  prometheus.yml  pyproject.toml  requirements.txt
config/: config.yaml  settings.py
demo/: fraud_feature_store.py
docs/: demo.md
docs/internal/: DOCUMENTATION.md
proto/: strata.proto
sdk/: __init__.py  client.py
strata_core/: asof_engine.py  lineage.py  main.py  materialiser.py  metrics.py  models.py  offline_store.py  online_store.py  registry.py  validator.py
tests/: conftest.py  test_asof_engine.py  test_integration.py  test_materialiser.py  test_offline_store.py  test_online_store.py  test_registry.py  test_validator.py
